2008-03-27  Martin Simmons <martin@lispworks.com>

	* swank-lispworks.lisp (map-error-database): Make mapping work for
	LispWorks 5.1 too.

2008-03-26 Tobias C. Rittweiler  <tcr@freebits.de>

	On SBCL, 

	  (block outta
	    (let ((*debugger-hook* #'(lambda (c hook)
				       (declare (ignore hook))
				       (return-from outta 42))))
	      (error "FOO")))

	would just silently skip over the *DEBUGGER-HOOK*, and pop right
	into SLDB to handle the error. Fix that.
	
	* swank-sbcl (make-invoke-debugger-hook): New function; returns a
	hook for SB-EXT:*INVOKE-DEBUGGER-HOOK* that checks for the
	presence of *DEBUGGER-HOOK*, and calls that if available.
	(install-debugger-globally): Use it.
	(call-with-debugger-hook): Ditto.

	(getpid): Declaim return type explicitly, to make SBCL shut up about
	being unable to optimize %SAP-ALIEN in ENABLE-SIGIO-ON-FD.

	* slime.el (def-slime-test break): Test additionally that BREAK
	turns into SLDB even when *DEBUGGER-HOOK* is locally bound.
	(def-slime-test locally-bound-debugger-hook): New test case; tests
	that a locally-bound *DEBUGGER-HOOK* is adhered, and not skipped.
	
2008-03-26  Helmut Eller  <heller@common-lisp.net>

	By default, don't ask if SLIME should be started.

	* slime.el (slime-auto-connect): New variable.
	(slime-auto-connect): New function.
	(slime-connection): Use it.

2008-03-24  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-check-version): New function.  Make the
	prompt fit in a single line.

	* swank-loader.lisp (load-swank): Call swank::before-init.

	* swank.lisp (before-init): New function.
	(init): Renamed from setup.

2008-03-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* HACKING: Updated due to broken links. 
	Reported by Mirko Vukovic.

2008-03-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-set-connection-info): Display SLIME and SWANK
	versions explicitly in Protocol Mismatch message.  Adapted from
	idea and patch by Jeronimo Pellegrini.
	